--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,11 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
+        in_memory:
+            memory:
+                users:
+                    paul: { password: $2y$10$hK7gPQtNeENhxRNlud/OsODC.TUrrgAPaB0gJImFMEXq15Ja0fPm2, ROLE_ADMIN}
+                    romain: { password: $2y$10$hK7gPQtNeENhxRNlud/OsODC.TUrrgAPaB0gJImFMEXq15Ja0fPm2, ROLE_USER}
         users_in_memory: { memory: null }
     firewalls:
         dev:
@@ -9,15 +14,23 @@ security:
         main:
             anonymous: lazy
             provider: users_in_memory
+            
+            http_basic: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
-
+    
+    encoders:
+        Symfony\Component\Security\Core\User\User:
+            algorithm: bcrypt
+            cost: 15
+    
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: /lesEntreprises/ajouter, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
