--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,21 +1,28 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory:
-                users:
-                    paul: { password: $2y$10$hK7gPQtNeENhxRNlud/OsODC.TUrrgAPaB0gJImFMEXq15Ja0fPm2, ROLE_ADMIN}
-                    romain: { password: $2y$10$hK7gPQtNeENhxRNlud/OsODC.TUrrgAPaB0gJImFMEXq15Ja0fPm2, ROLE_USER}
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: username
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-            provider: users_in_memory
+            anonymous: true
+
             
-            http_basic: true
+            #http_basic: true
+            guard:
+                authenticators:
+                    - App\Security\FormulaireLoginAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -27,6 +34,9 @@ security:
         Symfony\Component\Security\Core\User\User:
             algorithm: bcrypt
             cost: 15
+        App\Entity\User:
+            algorithm: auto
+
     
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
